# subjective_qwen_local_datasource

./: .gitignore  SubjectiveQwenLocalDataSource.py  description-en.json  pyproject.toml
tests/: __init__.py  conftest.py  test_qwen_local.py
